# android-python-interpreter-cmake

./: .gitignore  README.md  contributors.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/bko/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/python/: main.py
app/src/main/assets/python/modules/test/: test_int.py
app/src/main/cpp/: native-lib.cpp  native-util.cpp  native-util.h
app/src/main/java/com/example/bko/: AssetExtractor.java  MainActivity.java  PythonUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/bko/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
